# host_udp_ws

install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cspc_lidar/lib/cspc_lidar/: cspc_lidar  front_distance_tester.py
install/cspc_lidar/share/cspc_lidar/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
install/dog_udp_comm/lib/dog_udp_comm/: analyze_tracking_cmd_bag.py  host_mpc_controller.py  keyboard_teleop.py  pixel_to_scan_polar.py  sender_node  tracking_center_tester.py  tracking_string_bridge.py
install/dog_udp_comm/share/dog_udp_comm/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/cspc_lidar_sdk_ros2/: CMakeLists.txt
src/cspc_lidar_sdk_ros2/src/: node_lidar_ros.cpp
src/dog_udp_comm/: CMakeLists.txt  package.xml
src/dog_udp_comm/launch/: person_follow_udp_launch.py  sender_launch.py
src/dog_udp_comm/scripts/: analyze_tracking_cmd_bag.py  host_mpc_controller.py  keyboard_teleop.py  pixel_to_scan_polar.py  tracking_center_tester.py  tracking_string_bridge.py
src/dog_udp_comm/src/: sender_node.cpp
user_command/: CMakeLists.txt  README_AUTOSTART.md
user_command/config/: param.yaml
user_command/include/sdk_command/: sdk_command_node.hpp
user_command/scripts/: install_user_command_service.sh  start_user_command.sh
user_command/src/: sdk_command_node.cpp
user_command/systemd/: user-command.service
(+17 files in other folders)
